--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,6 +38,14 @@
           <li><a href="{{ site.github.repository_url }}">View On <strong>GitHub</strong></a></li>
         </ul>
         {% endif %}
+
+        <nav>
+            {% for item in site.data.navigation %}
+              <a href="{{ item.link }}" {% if page.url == item.link %}style="color: red;"{% endif %}>
+                {{ item.name }}
+              </a>
+            {% endfor %}
+        </nav>
       </header>
       <section>
 
