--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
             <img src="{{site.logo | relative_url}}" alt="Logo" />
             {% endif %}
 
-            <ul style="list-style-type: none;">
+            <ul class="nav-bar">
                 {% for item in site.data.navigation %}
                 <li><a href="{{ item.link }}" {% if page.url==item.link %}style="color: #bf0000;" {% endif %}>
                         {{ item.name }}</a></li>
