--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,8 +20,8 @@
 
             <ul class="nav-bar">
                 {% for item in site.data.navigation %}
-                <li><a href="{{ item.link }}" {% if page.url==item.link %}style="color: #bf0000;" {% endif %}>
-                        {{ item.name }}</a></li>
+                <li><a class="nav-item" href="{{ item.link }}" {% if page.url==item.link %}style="color: #bf0000;" {%
+                        endif %}>{{ item.name }}</a></li>
                 {% endfor %}
             </ul>
         </header>
