--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,3 +3,10 @@
 
 @import "nav";
 @import "{{ site.theme }}";
+
+.nav-bar {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    width: 60px;
+}
