--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -4,7 +4,7 @@
 @import "nav";
 @import "{{ site.theme }}";
 
-.nav-bar {
+ul.nav-bar {
     list-style-type: none;
     margin: 0;
     padding: 0;
