--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,12 +1,12 @@
 ---
 ---
 
-@import "nav";
+// @import "nav";
 @import "{{ site.theme }}";
 
-ul.nav-bar {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    width: 60px;
-}
+// ul.nav-bar {
+//     list-style-type: none;
+//     margin: 0;
+//     padding: 0;
+//     width: 60px;
+// }
