--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,12 +18,12 @@
             <img src="{{site.logo | relative_url}}" alt="Logo" />
             {% endif %}
 
-            <!-- <ul class="nav-bar">
+            <ul class="nav-bar">
                 {% for item in site.data.navigation %}
                 <li><a class="nav-item" href="{{ item.link }}" {% if page.url==item.link %}style="color: #bf0000;" {%
                         endif %}>{{ item.name }}</a></li>
                 {% endfor %}
-            </ul> -->
+            </ul>
         </header>
         <section>
 
