--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,6 +18,14 @@
           <img src="{{site.logo | relative_url}}" alt="Logo" />
         {% endif %}
 
+        <ul class="nav-bar">
+            {% for item in site.data.navigation %}
+            <li><a class="nav-item" href="{{ item.link }}" {% if page.url==item.link %}style="color: #bf0000;" {% endif %}>
+                {{ item.name }}
+            </a></li>
+            {% endfor %}
+        </ul>
+
         <!-- <p>{{ site.description | default: site.github.project_tagline }}</p>
 
         {% if site.github.is_project_page %}
@@ -42,9 +50,7 @@
 
       </section>
       <footer>
-        <!-- {% if site.github.is_project_page %} -->
         <p>This project is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
-        <!-- {% endif %} -->
         <!-- <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p> -->
         <p><small>Hosted on GitHub Pages</small></p>
       </footer>
