--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,9 +18,11 @@
 
         <ul class="nav-bar">
             {% for item in site.data.navigation %}
-            <li><a class="nav-item" href="{{ item.link }}" {% if page.url==item.link %}style="color: #bf0000;" {% endif %}>
-                {{ item.name }}
-            </a></li>
+            <li>
+                <a class="nav-item" href="{{ item.link }}" {% if page.url==item.link %}style="color: #bf0000;" {% endif %}>
+                    {{ item.name }}
+                </a>
+            </li>
             {% endfor %}
         </ul>
       </header>
