--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
     <div class="wrapper">
       <header>
         {% if site.logo %}
-          <img src="{{site.logo | relative_url}}" alt="Logo" />
+          <img src="{{site.logo | relative_url}}" alt="Logo" height="200px" />
         {% endif %}
 
         <ul class="nav-bar">
@@ -36,6 +36,5 @@
         <p><small>Hosted on GitHub Pages</small></p>
       </footer>
     </div>
-    <!-- <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script> -->
   </body>
 </html>
