--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
     <div class="wrapper">
       <header>
         {% if site.logo %}
-          <img src="{{site.logo | relative_url}}" alt="Logo" height="200px" />
+          <img src="{{site.logo | relative_url}}" alt="Logo" height="100px" style="display: block;margin-left: auto;margin-right: auto;" />
         {% endif %}
 
         <ul class="nav-bar">
