--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -19,9 +19,8 @@
 
 .demo {
     list-style-type: none;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
+    display: flex;
+    justify-content: center;
 }
 
 .demo-title {
