--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -17,13 +17,12 @@
     font-weight: bold;
 }
 
-.demo {
-    list-style-type: none;
-    display: block;
-    justify-content: center;
+.demo-cover {
+    margin: auto;
 }
 
 .demo-title {
+    margin: auto;
     font-size: 16px;
 }
 
