--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -18,12 +18,12 @@
 }
 
 .demo-cover {
-    margin: auto;
+    align-content: center;
 }
 
 .demo-title {
-    margin: auto;
     font-size: 16px;
+    text-align: center;
 }
 
 .manga {
