--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -59,10 +59,7 @@
     font-weight: bold;
 }
 
-.pages {
-    list-style-type: none;
-}
-
 .page {
-    display: inline-block;
+    display: flex;
+    justify-content: center;
 }
