--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -71,6 +71,10 @@
     font-weight: bold;
 }
 
+.pages {
+    display: inline-block;
+}
+
 .page {
     display: flex;
     justify-content: center;
