--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -12,7 +12,7 @@
 .nav-item {
     font-size: 20px;
     color: #222;
-    padding: 10px;
+    padding-right: 20px;
     display: block;
 }
 
@@ -82,7 +82,7 @@
     .nav-item {
         font-size: 20px;
         color: #222;
-        padding: 10px;
+        padding-right: 20px;
         display: inline-block;
     }
     
