--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
         {% if page.lang == "en" %}
           <div class="nav-bar">
             {% for item in site.data.navigation-en %}
-              <a class="nav-item" href="{{ item.link }}" {% if page.url==item.link %}style="color: #bf0000;" {% endif %}>
+              <a class="nav-item" href="{{ item.link }}" {% if page.title==item.title %}style="color: #bf0000;" {% endif %}>
                 {{ item.name }}
               </a>
             {% endfor %}
@@ -29,7 +29,7 @@
         {% if page.lang == "zh" %}
           <div class="nav-bar">
             {% for item in site.data.navigation-zh %}
-              <a class="nav-item" href="{{ item.link }}" {% if page.url==item.link %}style="color: #bf0000;" {% endif %}>
+              <a class="nav-item" href="{{ item.link }}" {% if page.title==item.title %}style="color: #bf0000;" {% endif %}>
                 {{ item.name }}
               </a>
             {% endfor %}
@@ -39,7 +39,7 @@
         {% if page.lang == "zh-HK" %}
           <div class="nav-bar">
             {% for item in site.data.navigation-zh-HK %}
-              <a class="nav-item" href="{{ item.link }}" {% if page.url==item.link %}style="color: #bf0000;" {% endif %}>
+              <a class="nav-item" href="{{ item.link }}" {% if page.title==item.title %}style="color: #bf0000;" {% endif %}>
                 {{ item.name }}
               </a>
             {% endfor %}
@@ -53,63 +53,63 @@
       </section>
       <footer>
         {% if page.title == "index" %}
-          <span class="lang-bar">
+          <div class="lang-bar">
             {% for item in site.data.language-index %}
-              <a class="lang-item" href="{{ item.link }}" {% if page.url==item.link %}style="color: #bf0000;" {% endif %}>
+              <a class="lang-item" href="{{ item.link }}" {% if page.lang==item.name %}style="color: #bf0000;" {% endif %}>
                 {{ item.name }}
               </a>
             {% endfor %}
-            </span>
+            </div>
         {% endif %}
 
         {% if page.title == "guide" %}
-          <span class="lang-bar">
+          <div class="lang-bar">
             {% for item in site.data.language-guide %}
-              <a class="lang-item" href="{{ item.link }}" {% if page.url==item.link %}style="color: #bf0000;" {% endif %}>
+              <a class="lang-item" href="{{ item.link }}" {% if page.lang==item.name %}style="color: #bf0000;" {% endif %}>
                 {{ item.name }}
               </a>
             {% endfor %}
-          </span>
+          </div>
         {% endif %}
 
         {% if page.title == "terms" %}
-          <span class="lang-bar">
+          <div class="lang-bar">
             {% for item in site.data.language-terms %}
-              <a class="lang-item" href="{{ item.link }}" {% if page.url==item.link %}style="color: #bf0000;" {% endif %}>
+              <a class="lang-item" href="{{ item.link }}" {% if page.lang==item.name %}style="color: #bf0000;" {% endif %}>
                 {{ item.name }}
               </a>
             {% endfor %}
-          </span>
+          </div>
         {% endif %}
 
         {% if page.title == "demo" %}
-          <span class="lang-bar">
+          <div class="lang-bar">
             {% for item in site.data.language-demo %}
-              <a class="lang-item" href="{{ item.link }}" {% if page.url==item.link %}style="color: #bf0000;" {% endif %}>
+              <a class="lang-item" href="{{ item.link }}" {% if page.lang==item.name %}style="color: #bf0000;" {% endif %}>
                 {{ item.name }}
               </a>
             {% endfor %}
-          </span>
+          </div>
         {% endif %}
 
         {% if page.title == "manga" %}
-          <span class="lang-bar">
+          <div class="lang-bar">
             {% for item in site.data.language-manga %}
-              <a class="lang-item" href="{{ item.link }}" {% if page.url==item.link %}style="color: #bf0000;" {% endif %}>
+              <a class="lang-item" href="{{ item.link }}" {% if page.lang==item.name %}style="color: #bf0000;" {% endif %}>
                 {{ item.name }}
               </a>
             {% endfor %}
-          </span>
+          </div>
         {% endif %}
 
         {% if page.title == "pages" %}
-          <span class="lang-bar">
+          <div class="lang-bar">
             {% for item in site.data.language-pages %}
-              <a class="lang-item" href="{{ item.link }}" {% if page.url==item.link %}style="color: #bf0000;" {% endif %}>
+              <a class="lang-item" href="{{ item.link }}" {% if page.lang==item.name %}style="color: #bf0000;" {% endif %}>
                 {{ item.name }}
               </a>
             {% endfor %}
-          </span>
+          </div>
         {% endif %}
 
         <p>This project is maintained by <a class="github-page" href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
