--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -21,6 +21,11 @@
     font-weight: bold;
 }
 
+.lang-bar {
+    overflow: auto;
+    white-space: nowrap;
+}
+
 .lang-item {
     color: #222;
     padding-right: 10px;
