--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -55,7 +55,7 @@
         {% if page.title == "index" %}
           <div class="lang-bar">
             {% for item in site.data.language-index %}
-              <a class="lang-item" href="{{ item.link }}" {% if page.lang==item.name %}style="color: #bf0000;" {% endif %}>
+              <a class="lang-item" href="{{ item.link }}" {% if page.lang==item.code %}style="color: #bf0000;" {% endif %}>
                 {{ item.name }}
               </a>
             {% endfor %}
@@ -65,7 +65,7 @@
         {% if page.title == "guide" %}
           <div class="lang-bar">
             {% for item in site.data.language-guide %}
-              <a class="lang-item" href="{{ item.link }}" {% if page.lang==item.name %}style="color: #bf0000;" {% endif %}>
+              <a class="lang-item" href="{{ item.link }}" {% if page.lang==item.code %}style="color: #bf0000;" {% endif %}>
                 {{ item.name }}
               </a>
             {% endfor %}
@@ -75,7 +75,7 @@
         {% if page.title == "terms" %}
           <div class="lang-bar">
             {% for item in site.data.language-terms %}
-              <a class="lang-item" href="{{ item.link }}" {% if page.lang==item.name %}style="color: #bf0000;" {% endif %}>
+              <a class="lang-item" href="{{ item.link }}" {% if page.lang==item.code %}style="color: #bf0000;" {% endif %}>
                 {{ item.name }}
               </a>
             {% endfor %}
@@ -85,7 +85,7 @@
         {% if page.title == "demo" %}
           <div class="lang-bar">
             {% for item in site.data.language-demo %}
-              <a class="lang-item" href="{{ item.link }}" {% if page.lang==item.name %}style="color: #bf0000;" {% endif %}>
+              <a class="lang-item" href="{{ item.link }}" {% if page.lang==item.code %}style="color: #bf0000;" {% endif %}>
                 {{ item.name }}
               </a>
             {% endfor %}
@@ -95,7 +95,7 @@
         {% if page.title == "manga" %}
           <div class="lang-bar">
             {% for item in site.data.language-manga %}
-              <a class="lang-item" href="{{ item.link }}" {% if page.lang==item.name %}style="color: #bf0000;" {% endif %}>
+              <a class="lang-item" href="{{ item.link }}" {% if page.lang==item.code %}style="color: #bf0000;" {% endif %}>
                 {{ item.name }}
               </a>
             {% endfor %}
@@ -105,7 +105,7 @@
         {% if page.title == "pages" %}
           <div class="lang-bar">
             {% for item in site.data.language-pages %}
-              <a class="lang-item" href="{{ item.link }}" {% if page.lang==item.name %}style="color: #bf0000;" {% endif %}>
+              <a class="lang-item" href="{{ item.link }}" {% if page.lang==item.code %}style="color: #bf0000;" {% endif %}>
                 {{ item.name }}
               </a>
             {% endfor %}
