--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,7 +34,7 @@
 
       </section>
       <footer>
-        {% for tag in site.data.language %}
+        <!-- {% for tag in site.data.language %}
           {% if page.lang == tag.lang %}
             <div class="lang-bar">
               {% for route in tag.route %}
@@ -46,7 +46,7 @@
               {% endfor %}
             </div>
           {% endfor %}
-        {% endfor %}
+        {% endfor %} -->
 
         <p>This project is maintained by <a class="github-page" href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
         <p><small>Hosted on GitHub Pages</small></p>
