--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,8 +19,8 @@
         {% for language in site.data.navigation %}
           {% if page.lang == language.lang %}
             <div class="nav-bar">
-              {% for route in language.route %}
-                <a class="nav-item" href="{{ route.link }}" {% if page.title==route.title %}style="color: #bf0000;" {% endif %}>
+              {% for item in language.route %}
+                <a class="nav-item" href="{{ item.link }}" {% if page.title==item.title %}style="color: #bf0000;" {% endif %}>
                   {{ route.name }}
                 </a>
               {% endfor %}
