--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,7 @@
                 </a>
               {% endfor %}
             </div>
-          {% endfor %}
+          {% endif %}
         {% endfor %}
       </header>
       <section>
