--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,13 +16,13 @@
           <img class="logo" src="{{site.logo | relative_url}}" alt="Logo" height="100px" />
         {% endif %}
         
-        {% for item in site.data.navigation %}
-          <div class="nav-bar">
+        <div class="nav-bar"></div>
+          {% for item in site.data.navigation %}
             <a class="nav-item" href="/zh/">
               test
             </a>
-          </div>
-        {% endif %}
+          {% endif %}
+        </div>
       </header>
       <section>
 
