--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
         {% endif %}
         
         <div class="nav-bar"></div>
-          {% for item in site.data.navigation %}
+          {% for item in site.data.nav %}
             <a class="nav-item" href="/zh/">
               test
             </a>
