--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
             <a class="nav-item" href="/zh/">
               test
             </a>
-          {% endif %}
+          {% endfor %}
         </div>
       </header>
       <section>
